...
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>
    <string name="edit_option">edit…</string>

    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>

    <string name="discard">Discard</string>

    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name= "assistant">Assistant</string>

    <string name="yes">Yes</string>
...
    <string name="decline">Decline</string>

    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>

    <string name="skip">skip</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>

    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait</string>
    <string name="search_hint">Search</string>

...
    <!-- Main Menu -->
    <string name="main_menu_continue">Continue project</string>
    <string name="main_menu_new">New project</string>
    <string name="main_menu_programs">Projects on device</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_web">Catrobat community</string>
    <string name="main_menu_upload">Upload project</string>

    <string name="main_menu_rate_app">Rate us!</string>
    <string name="main_menu_terms_of_use">Terms of Use and Service</string>
    <string name="main_menu_privacy_policy">Privacy Policy</string>
    <string name="main_menu_about">About this app</string>
    <string name="main_menu_login">Login</string>
...
    <string name="am_unpack">Unpack</string>
    <string name="am_copy">Copy</string>
    <string name="am_delete">Delete</string>
    <string name="am_rename">Rename</string>
    <string name="am_convert">Convert</string>
    <string name="am_merge">Merge</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="project_options">Project options</string>
    <string name="from_library">Add from library</string>
...
    <string name="switch_to_1d">1D view</string>
    <!--  -->


    <!-- Play scene dialog -->
    <string name="play_scene_dialog_title">Play scene:</string>
    <string name="play_scene_dialog_default">First scene (%1$s)</string>
    <string name="play_scene_dialog_current">Current scene (%1$s)</string>
    <!--  -->


    <!-- Sign In dialogs -->
    <string name="sign_in_dialog_title">Sign in</string>
    <string name="username">Username</string>
...
